@@ -115,10 +115,16 @@ int SSDB::hincr(const Bytes &name, const Bytes &key, int64_t by, int64_t *new_va
 	}else if(ret == 0){
 		*new_val = by;
 	}else{
-		*new_val = str_to_int64(old.data(), old.size()) + by;
+		*new_val = str_to_int64(old) + by;
+		if(errno != 0){
+			return 0;
+		}
 	}
 
 	ret = hset_one(this, name, key, int_to_str(*new_val), log_type);
+	if(ret == -1){
+		return -1;
+	}
 	if(ret >= 0){
 		if(ret > 0){
 			if(incr_hsize(this, name, ret) == -1){
@@ -130,7 +136,7 @@ int SSDB::hincr(const Bytes &name, const Bytes &key, int64_t by, int64_t *new_va
 			return -1;
 		}
 	}
-	return ret;
+	return 1;
 }
 
 int64_t SSDB::hsize(const Bytes &name) const{
